fixing small css to match png assets. Majory focus on spacing

--- a/src/global.scss
+++ b/src/global.scss
@@ -8,9 +8,13 @@ html {
   --gray: #888;
   --royal: #0072CE;
   --blue: #6AD1E3;
-  --primary: #710581;
   --secondary: var(--royal);
   --tertiary: #FF585D;
+
+  --primary: #710581;
+  --primarylight: #f0a6fd;
+  --primaryfaded: #b981c1;
+
 
   background-color: var(--bg);
   background-image: linear-gradient(234deg, #f7fbf7 50%, #e1b8dc);
@@ -47,8 +51,13 @@ fieldset {
   border: none;
   margin: 0;
   padding: 0;
+  position: relative;
 }
-
+fieldset .options {
+  position: absolute;
+  right: 33px;
+  top: 33px;
+}
 .highlight {
   align-items: center;
   display: flex;
@@ -183,10 +192,10 @@ header button:hover {
 }
 
 fieldset, .elementBox {                              /* element containers */
-  border: 1px solid var(--primary);
+  border: 1px solid var(--primaryfaded);
   border-radius: 25px;
   padding: 20px;
-  margin: 20px;
+  margin: 4.5px 13px;
   background: var(--bg);
 }
 .elementBox {
@@ -203,10 +212,6 @@ fieldset, .elementBox {                              /* element containers */
   right: 20px;
   text-align: right;
 }
-.elementBox h3{
-  color: var(--primary);
-  margin: 10px 0;
-}
 .elementBox p {
   color: var(--primary);
 }
@@ -218,13 +223,18 @@ fieldset, .elementBox {                              /* element containers */
   height: 60px;
   width: 60px;
   margin-top: -60px;
+  padding: 10px;
+}
+.downArrow svg {
+  transform: scale(1.2);
+  transform-origin: 0 0;
 }
 .elementFooter{
   border-radius: 0px;
   margin: 0 -20px;
   padding: 20px 40px;
   border: none;
-  border-top: 1px solid var(--primary);
+  border-top: 1px solid var(--primaryfaded);
 }
 .elementFooter p{ margin: 5px 0; }
 .elementFooter .selection:nth-child(2){ flex:8; text-align: right; }
@@ -233,7 +243,7 @@ fieldset, .elementBox {                              /* element containers */
   color: var(--primary);
   display: table;
   table-layout: fixed;
-  border-spacing: 30px;
+  border-spacing: 30px 0px;
   padding: 15px;
 
 }
@@ -248,9 +258,11 @@ fieldset, .elementBox {                              /* element containers */
 .modeMenu a:hover{  border-bottom: 2px solid var(--primary); }
 .elementButton button{                                /* Compleate button in same style as element */
   width: -webkit-fill-available;
+  color: var(--primary);
+  font-weight: 500;
   padding: 20px;
-  margin: 20px;
-  background-image: linear-gradient(37deg, #dcb5f3, #fbd1b9);
+  margin: 13.5px 13px 33px 13px;
+  background-image: linear-gradient(11deg, #dcb5f3, #fbd1b9);
   border: 1px solid var(--primary);
   border-radius: 19px;
 }
@@ -260,8 +272,34 @@ fieldset, .elementBox {                              /* element containers */
   border-radius: 19px;
   color: var(--primary);
   border: 1px solid var(--primary);
-  padding: 16px;
+  padding: 8px;
   font-size: 16px;
+  display: flex;
+}
+.dropbtn .circle {
+  border-radius: 100px;
+  margin-left: 7px;
+  border: 1px solid var(--primary);
+  width: 37px;
+  height: 37px;
+
+}
+.dropbtn .circle img {
+  max-width: 37px;
+  max-height: 37px;
+  padding: 10px;
+  margin-left: -1px;
+  margin-top: -1px;
+}
+.dropbtn .name {
+  position: relative;
+  font-size: 29px;
+  font-weight: 500;
+  padding-left: 10px;
+  line-height: 37px;
+}
+.balance {
+  font-weight: 500;
 }
 .dropdown {
   position: relative;
